# clienthrm

./: .gitignore  README.md  TESTING.md  docker-compose.yml  frontend-build-output.txt  grocery_benefit_plan.md  migrate-dry.txt  platform-build-output.txt  refactor_confirms.js  test-all-24-modules-output.txt  test-all-24-modules-ui-output.txt  test-report-run-20260618-133034.txt  test-report-run-20260619-102246.txt  test-report-run-20260619-161530.txt  test-run-complete-output.txt
backend/: .env.example  Cargo.toml  build2.txt  build3.txt  build4.txt  build5.txt  build6.txt  build7.txt  build8.txt  build_current.txt  build_current2.txt  build_errors2.txt  build_errors3.txt  build_errors4.txt  build_errors5.txt  build_errors6.txt  build_errors7.txt  errors_compact.txt  fix_db_errors.py  fix_db_layer.py  fix_query_map2.py  imap_worker.py  startup-test.err  test_api.js  test_db.php  test_post.js
backend/src/: arrears_logic.rs  asset_email.rs  attendance_logic.rs  attendance_shift_email.rs  bio_park_tcp.rs  biometric_device_logic.rs  branch_scope.rs  career_logic.rs  chat_department_channels.rs  chat_events.rs  config.rs  db_health_tests.rs  desktop_update_feed.rs  doctor_report_email.rs  geo_policy.rs  grocery_email.rs  integration_tests.rs  leave_email.rs  leave_type_logic.rs  main.rs  object_storage.rs  otp_hash.rs  overtime_logic.rs  password_reset.rs  password_reset_email.rs  password_reset_otp.rs  password_reset_otp_email.rs  payroll_extras.rs  payroll_logic.rs  payroll_month_context.rs  payslip_email.rs  payslip_pdf.rs  payslip_render.rs  plan_limits.rs  presence.rs  rate_limit.rs  role_defaults.rs  routes.rs  salary_logic.rs  salary_split.rs  (+18 more)
backend/src/db/: connection.rs  dialect.rs  error.rs  migrations.rs  mod.rs  params.rs  (+9 more)
(+618 files in other folders)
