[package]
name = "hrm-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-multipart = "0.7"
actix-cors = "0.7"
actix-rt = "2"
actix-ws = "0.3"
futures-util = "0.3"

# Database — SQLite (dev) + PostgreSQL (production)
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
bytes = "1"
r2d2_postgres = "0.18"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# Auth
jsonwebtoken = "9"
bcrypt = "0.17"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["db-postgres"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "builder", "hostname", "smtp-transport"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
totp-rs = { version = "5", default-features = false, features = ["gen_secret", "otpauth"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
getrandom = "0.2"
genpdf = "0.2"
qrcode = "0.14"
redis = { version = "0.27", default-features = false }

# AWS S3 object storage (optional — enabled when AWS_S3_BUCKET is set)
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"

[profile.dev.package."*"]
opt-level = 3
